--- a/ontology_config.json
+++ b/ontology_config.json
@@ -13,7 +13,7 @@
       "CRMaaa_v0.9.4.6.xml",
       "CRMinf_v0.7.0.xml",
       "CRMsurv_v1.0.0.xml",
-      "CIDOC_CRM_v7.1.1_PC_Extended.xml"
+      "CIDOC_CRM_v.7.1.1_PC_Extended.xml"
   ],
   
  
