--- a/ontology_config.json
+++ b/ontology_config.json
@@ -9,10 +9,10 @@
       "CRMpe_v3.1.2.xml",
       "CRMgeo_v1.2.1.xml",
       "CRMdig_v3.2.2.xml",
-      "CRMarchaeo_v1.4.1.xml",
+      "CRMarchaeo_v1.4.2.xml",
       "CRMaaa_v0.9.4.6.xml",
-      "CRMinf_v0.7.0.xml",
-      "CRMsurv_v1.0.0.xml",
+      "CRMarchaeo_APC_v.1.0.0.xml",
+      "CRMsurv_v1.0.1.xml",
       "CIDOC_CRM_v.7.1.1_PC_Extended.xml"
   ],
   
